--- a/London.ipynb
+++ b/London.ipynb
@@ -1269,8 +1269,15 @@
     "\n",
     "On the other hand, calculating the ratio between 1998 and 2018, surprisingly, the most increase (or the smallest ratio) was found to be Hackney. This could be due to the fact that even though the starting point was similar, the Kensington & Chelsea started out with the higher price which means that even with less increase, Hackney had a better ratio.\n",
     "\n",
-    "Another interesting observation was the dip in housing price around year 2009. There coul"
+    "Another interesting observation was the dip in housing price around year 2009. This could have been impacted by the US housing market crash around 2007~2008."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
